--- a/plugins/gutenberg/src/blocks/members-grid/style.css
+++ b/plugins/gutenberg/src/blocks/members-grid/style.css
@@ -104,6 +104,14 @@
 	padding-top: 12px;
 }
 
+.wbe-members-grid__action .generic-button {
+	border: none;
+	padding: 0;
+	margin: 0;
+	background: none;
+	box-shadow: none;
+}
+
 .wbe-members-grid__action .generic-button a,
 .wbe-members-grid__action .generic-button button,
 .wbe-members-grid__friend-btn {
